# qir-qis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  devenv.nix  hugrenv.nix  main.py  pyproject.toml  qir_qis.pyi  qtm-qir-reference.md
.cargo/: mutants.toml
.github/: dependabot.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-llvm/: action.yml
.github/manylinux/: Dockerfile.manylinux-2_34-aarch64  Dockerfile.manylinux-2_34-x86_64  llvm-config-wrapper.sh
.github/scripts/: __init__.py  build_repaired_wheel.py  install_hugrenv.py
.github/workflows/: CI.yml  codeql.yml  pr-title.yml  release-please.yml  robustness.yml  rust-release.yml  typos.yml  wheels-release.yml
examples/: python_api.py  rust_api.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: declared_qis_calls.rs  entry_contracts.rs  get_entry_attributes.rs  mutated_fixture_bitcode.rs  mutated_fixture_contracts.rs  parse_wasm_functions.rs  qir_ll_to_bc.rs  qir_to_qis.rs  result_index_contracts.rs  validate_fixture_with_wasm.rs  validate_qir.rs
src/: convert.rs  decompose.rs  lib.rs  llvm_verify.rs  main.rs  opt.rs  utils.rs
tests/: __init__.py  test_main.py
tests/data/: ArithOps_switch.ll  adaptive.ll  adaptive_cond_loop.ll  adaptive_ir_fns.ll  adaptive_iter.ll  adaptive_iter_fn.ll  adaptive_multi_ret.ll  barrier.ll  barrier_multi.ll  base-attrs.ll  base_array.ll  base_native_only.ll  dynamic_qubit_alloc.ll  dynamic_qubit_alloc_checked.ll  dynamic_qubit_array_checked.ll  dynamic_qubit_array_ssa.ll  dynamic_result_alloc.ll  dynamic_result_array.ll  dynamic_result_mixed_array_output.ll  mz_leaked.ll  qir2_adaptive.ll  qir2_base.ll
tests/data/bad/: barrier_invalid.ll  base-16.ll  inf_loop.ll  ir_fn_main.ll  mz_to_creg_bit.ll
tests/snaps/: ArithOps_switch.ll.snap  adaptive.ll.snap  adaptive_cond_loop.ll.snap  adaptive_ir_fns.ll.snap  adaptive_iter.ll.snap  adaptive_iter_fn.ll.snap  adaptive_multi_ret.ll.snap  bad__inf_loop.ll.snap  barrier.ll.snap  barrier_multi.ll.snap  base.ll.snap  base_array.ll.snap  base_native_only.ll.snap  dynamic_qubit_alloc.ll.snap  dynamic_qubit_alloc_checked.ll.snap  dynamic_qubit_array_checked.ll.snap  dynamic_qubit_array_ssa.ll.snap  dynamic_result_alloc.ll.snap  dynamic_result_array.ll.snap  dynamic_result_mixed_array_output.ll.snap  mz_leaked.ll.snap  qir2_adaptive.ll.snap  qir2_base.ll.snap
