[project]
name = "qir_qis"
description = "QIR to Quantinuum QIS (Quantum Instruction Set) compiler"
readme = "README.md"
authors = [{ name = "Kartik Singhal", email = "kartik.singhal@quantinuum.com" }]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/quantinuum/qir-qis/"

[build-system]
requires = ["maturin~=1.0"]
build-backend = "maturin"

[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin~=1.0",
    "qir-formatter~=0.1",
    "rich~=14.0",
    "selene-sim~=0.2.11",
]

[tool.uv]
prerelease = "allow"
# Rebuild package when any rust files change
cache-keys = [{ file = "src/**/*.rs" }]

[tool.uv.sources]
# selene-sim = { path = "../selene" }

[tool.deptry]
known_first_party = ["qir_qis"]

[tool.deptry.package_module_name_map]
selene-sim = ["selene_helios_qis_plugin", "selene_sim"]

[tool.deptry.per_rule_ignores]
DEP004 = [
    "qir_formatter",            # used in tests
    "rich",                     # used in tests
    "selene_helios_qis_plugin", # used in tests
    "selene_sim",               # used in tests
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "COM812", # Trailing comma missing (ignored for ruff format)
    "D203",   # incorrect-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "PYI021", # Docstrings should not be included in stubs
]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build[uv]"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
manylinux-x86_64-image = "qir-qis-manylinux_2_34_x86_64"
manylinux-aarch64-image = "qir-qis-manylinux_2_34_aarch64"
test-command = [
    "python -c 'import qir_qis; from pathlib import Path; ll = Path(\"{project}/tests/data/base_native_only.ll\").read_text(); qir = qir_qis.qir_ll_to_bc(ll); qir_qis.validate_qir(qir); out = qir_qis.qir_to_qis(qir); assert isinstance(out, (bytes, bytearray)) and len(out) > 0'",
]

[tool.cibuildwheel.linux]
environment = { PATH = '$HOME/.cargo/bin:$PATH', LLVM_SYS_211_PREFIX = '/opt/llvm21', LLVM_CONFIG_PATH = '/opt/llvm21/bin/llvm-config', LD_LIBRARY_PATH = '/opt/llvm21/lib:$LD_LIBRARY_PATH', LLVM_SYS_211_NO_CLEAN_CFLAGS = '1', AR = '/usr/bin/ar', RANLIB = '/usr/bin/ranlib' }
before-all = [
    'curl -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal --default-toolchain 1.91.0',
    '/opt/llvm21/bin/llvm-config --version',
]
repair-wheel-command = [
    'auditwheel repair -w {dest_dir} {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]

[tool.cibuildwheel.macos.environment]
PATH = '/tmp/llvm/bin:$PATH'
LLVM_SYS_211_PREFIX = '/tmp/llvm'
MACOSX_DEPLOYMENT_TARGET = "15.0"
[tool.cibuildwheel.macos]
before-all = [
    'curl -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal',
    'brew install llvm@21',
    'if [ "$(uname -m)" = "arm64" ]; then LLVM_PREFIX=/opt/homebrew/opt/llvm@21; else LLVM_PREFIX=/usr/local/opt/llvm@21; fi',
    'mkdir -p /tmp/llvm',
    'rsync -a "${LLVM_PREFIX}/" /tmp/llvm/',
]
repair-wheel-command = [
    'DYLD_FALLBACK_LIBRARY_PATH=/tmp/llvm/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]

[tool.cibuildwheel.windows]
before-all = ['rustup update --no-self-update']
environment = { PATH = "$LLVM_PATH/bin;$PATH", LLVM_SYS_211_PREFIX = "$LLVM_PATH", LLVM_PATH = "$LLVM_PATH", LLVM_CONFIG_PATH = "$LLVM_CONFIG_PATH", QIR_QIS_ENABLE_WINDOWS_OPTIMIZE = "1" }
before-build = [
    'if "%LLVM_SYS_211_PREFIX%"=="" (echo LLVM_SYS_211_PREFIX is empty & set LLVM & where llvm-config & exit /b 1)',
    'if "%LLVM_CONFIG_PATH%"=="" (echo LLVM_CONFIG_PATH is empty & set LLVM & where llvm-config & exit /b 1)',
    'if not exist "%LLVM_CONFIG_PATH%" (echo llvm-config missing: %LLVM_CONFIG_PATH% & exit /b 1)',
    '"%LLVM_CONFIG_PATH%" --version',
]
repair-wheel-command = [
    'uvx --from delvewheel delvewheel repair -w {dest_dir} {wheel}',
    'uvx abi3audit --strict --report {wheel}',
]
test-command = [
    '''"%LLVM_PATH%\bin\llvm-as.exe" "{project}\tests\data\base_native_only.ll" -o "%TEMP%\base_native_only.bc"''',
    '''python -c "from pathlib import Path; import tempfile; import qir_qis; qir = (Path(tempfile.gettempdir()) / 'base_native_only.bc').read_bytes(); qir_qis.validate_qir(qir); out = qir_qis.qir_to_qis(qir, opt_level=0, target='x86-64'); assert isinstance(out, (bytes, bytearray)) and len(out) > 0"''',
]
